crates/tokmd/tests/snapshots/cli_snapshot_golden__diff_json.snap
---
source: crates/tokmd/tests/cli_snapshot_golden.rs
expression: normalize(stdout)
---
{"schema_version":2,"generated_at_ms":0,"tool":{"name":"tokmd","version":"0.0.0"},"mode":"diff","from_source":"<ROOT>","to_source":"<ROOT>","diff_rows":[],"totals":{"old_code":0,"new_code":0,"delta_code":0,"old_lines":0,"new_lines":0,"delta_lines":0,"old_files":0,"new_files":0,"delta_files":0,"old_bytes":0,"new_bytes":0,"delta_bytes":0,"old_tokens":0,"new_tokens":0,"delta_tokens":0}}
