crates/tokmd/tests/snapshots/cli_snapshot_golden__diff_markdown.snap
---
source: crates/tokmd/tests/cli_snapshot_golden.rs
expression: normalize(stdout)
---
## Diff: <ROOT> → <ROOT>

### Summary

|Metric|From|To|Delta|Change|
|---|---:|---:|---:|---:|
|LOC|0|0|0|+0.0%|
|Lines|0|0|0|+0.0%|
|Files|0|0|0|+0.0%|
|Bytes|0|0|0|+0.0%|
|Tokens|0|0|0|+0.0%|

### Language Movement

|Type|Count|
|---|---:|
|Changed|0|
|Added|0|
|Removed|0|
|Modified|0|

### Language Breakdown

|Language|Old LOC|New LOC|Delta|
|---|---:|---:|---:|
|**Total**|0|0|0|
