crates/tokmd/tests/snapshots/cli_snapshot_golden__export_csv.snap
---
source: crates/tokmd/tests/cli_snapshot_golden.rs
expression: stdout
---
path,module,lang,kind,code,comments,blanks,lines,bytes,tokens
large.rs,(root),Rust,parent,9,2,0,11,440,110
Cargo.toml,(root),TOML,parent,8,0,1,9,360,90
mixed.md,(root),Markdown,parent,4,5,2,11,440,110
mixed.md,(root),Rust,child,3,0,0,3,0,0
src/main.rs,src,Rust,parent,3,0,0,3,120,30
mixed.md,(root),JavaScript,child,1,0,0,1,0,0
script.js,(root),JavaScript,parent,1,0,0,1,40,10
space file.rs,(root),Rust,parent,1,0,0,1,40,10
README.md,(root),Markdown,parent,0,1,0,1,40,10
