crates/tokmd/tests/snapshots/cli_snapshot_golden__export_jsonl.snap
---
source: crates/tokmd/tests/cli_snapshot_golden.rs
expression: normalize(stdout)
---
{"type":"meta","schema_version":2,"generated_at_ms":0,"tool":{"name":"tokmd","version":"0.0.0"},"mode":"export","status":"complete","warnings":[],"scan":{"paths":["<ROOT>"],"excluded":[],"config":"auto","hidden":false,"no_ignore":false,"no_ignore_parent":false,"no_ignore_dot":false,"no_ignore_vcs":false,"treat_doc_strings_as_comments":false},"args":{"format":"jsonl","module_roots":["crates","packages"],"module_depth":2,"children":"separate","min_code":0,"max_rows":0,"redact":"none","strip_prefix":null}}
{"type":"row","path":"large.rs","module":"(root)","lang":"Rust","kind":"parent","code":9,"comments":2,"blanks":0,"lines":11,"bytes":440,"tokens":110}
{"type":"row","path":"Cargo.toml","module":"(root)","lang":"TOML","kind":"parent","code":8,"comments":0,"blanks":1,"lines":9,"bytes":360,"tokens":90}
{"type":"row","path":"mixed.md","module":"(root)","lang":"Markdown","kind":"parent","code":4,"comments":5,"blanks":2,"lines":11,"bytes":440,"tokens":110}
{"type":"row","path":"mixed.md","module":"(root)","lang":"Rust","kind":"child","code":3,"comments":0,"blanks":0,"lines":3,"bytes":0,"tokens":0}
{"type":"row","path":"src/main.rs","module":"src","lang":"Rust","kind":"parent","code":3,"comments":0,"blanks":0,"lines":3,"bytes":120,"tokens":30}
{"type":"row","path":"mixed.md","module":"(root)","lang":"JavaScript","kind":"child","code":1,"comments":0,"blanks":0,"lines":1,"bytes":0,"tokens":0}
{"type":"row","path":"script.js","module":"(root)","lang":"JavaScript","kind":"parent","code":1,"comments":0,"blanks":0,"lines":1,"bytes":40,"tokens":10}
{"type":"row","path":"space file.rs","module":"(root)","lang":"Rust","kind":"parent","code":1,"comments":0,"blanks":0,"lines":1,"bytes":40,"tokens":10}
{"type":"row","path":"README.md","module":"(root)","lang":"Markdown","kind":"parent","code":0,"comments":1,"blanks":0,"lines":1,"bytes":40,"tokens":10}
