crates/tokmd/tests/snapshots/cli_snapshot_golden__lang_json.snap
---
source: crates/tokmd/tests/cli_snapshot_golden.rs
expression: normalize(stdout)
---
{"schema_version":2,"generated_at_ms":0,"tool":{"name":"tokmd","version":"0.0.0"},"mode":"lang","status":"complete","warnings":[],"scan":{"paths":["<ROOT>"],"excluded":[],"config":"auto","hidden":false,"no_ignore":false,"no_ignore_parent":false,"no_ignore_dot":false,"no_ignore_vcs":false,"treat_doc_strings_as_comments":false},"args":{"format":"json","top":0,"with_files":false,"children":"collapse"},"rows":[{"lang":"Rust","code":13,"lines":15,"files":3,"bytes":600,"tokens":150,"avg_lines":5},{"lang":"TOML","code":8,"lines":9,"files":1,"bytes":360,"tokens":90,"avg_lines":9},{"lang":"Markdown","code":4,"lines":12,"files":2,"bytes":480,"tokens":120,"avg_lines":6},{"lang":"JavaScript","code":1,"lines":1,"files":1,"bytes":40,"tokens":10,"avg_lines":1}],"total":{"code":26,"lines":37,"files":7,"bytes":1480,"tokens":370,"avg_lines":5},"with_files":false,"children":"collapse","top":0}
