crates/tokmd/tests/snapshots/cli_snapshot_golden__lang_markdown.snap
---
source: crates/tokmd/tests/cli_snapshot_golden.rs
expression: stdout
---
|Lang|Code|Lines|Bytes|Tokens|
|---|---:|---:|---:|---:|
|Rust|13|15|600|150|
|TOML|8|9|360|90|
|Markdown|4|12|480|120|
|JavaScript|1|1|40|10|
|**Total**|26|37|1480|370|
