crates/tokmd/tests/snapshots/cli_snapshot_golden__module_json.snap
---
source: crates/tokmd/tests/cli_snapshot_golden.rs
expression: normalize(stdout)
---
{"schema_version":2,"generated_at_ms":0,"tool":{"name":"tokmd","version":"0.0.0"},"mode":"module","status":"complete","warnings":[],"scan":{"paths":["<ROOT>"],"excluded":[],"config":"auto","hidden":false,"no_ignore":false,"no_ignore_parent":false,"no_ignore_dot":false,"no_ignore_vcs":false,"treat_doc_strings_as_comments":false},"args":{"format":"json","module_roots":["crates","packages"],"module_depth":2,"children":"separate","top":0},"rows":[{"module":"(root)","code":27,"lines":38,"files":6,"bytes":1360,"tokens":340,"avg_lines":6},{"module":"src","code":3,"lines":3,"files":1,"bytes":120,"tokens":30,"avg_lines":3}],"total":{"code":30,"lines":41,"files":7,"bytes":1480,"tokens":370,"avg_lines":6},"module_roots":["crates","packages"],"module_depth":2,"children":"separate","top":0}
